plugins {
	id 'java'
    id 'java-library'
    id 'jacoco'
    id "org.sonarqube" version "6.2.0.5505"
    id 'signing'
	id 'maven-publish'
}

group = 'io.github.sandydunlop'
version = '0.3.1'

repositories {
	mavenLocal()
	mavenCentral()
}

tasks.withType(JavaCompile) {
    options.compilerArgs.addAll([
        '--add-exports', "jdk.javadoc/jdk.javadoc.internal.tool=markista"
    ])
}

dependencies {
    implementation(platform("io.github.qishr:cascara-meta-bom:0.1.7"))

    // JUnit
    testImplementation 'org.junit.jupiter:junit-jupiter-api'
    testImplementation 'org.junit.jupiter:junit-jupiter-params'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Mockito
    testImplementation 'org.mockito:mockito-core'
    testImplementation 'org.mockito:mockito-junit-jupiter'

    // Cascara
    implementation "io.github.qishr:cascara-common"
    implementation "io.github.qishr:cascara-lang-java"
}

java {
    withJavadocJar()
    withSourcesJar()
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

test {
	useJUnitPlatform()
	testLogging {
		events "passed", "skipped", "failed"
	}
    finalizedBy jacocoTestReport // report is always generated after tests run
}

jacocoTestReport {
    dependsOn test // tests are required to run before generating the report
    reports {
        xml.required = true
        html.required = true
    }
}

jacoco {
    toolVersion = "0.8.13"
}

sonar {
  properties {
    property "sonar.projectKey", "sandydunlop_markista"
    property "sonar.organization", "sandydunlop"
    property "sonar.host.url", "https://sonarcloud.io"
  }
}

def user = ["whoami"].execute().text.trim()
jar {
    manifest {
        attributes( 'Main-Class': 'io.github.sandydunlop.markista.doclet.MarkdownDoclet',
                    'Implementation-Title': 'Markista',
                    'Implementation-Version': version,
                    'Implementation-Vendor': group,
                    'Automatic-Module-Name': 'io.github.sandydunlop.markista',
                    'Built-By': "${user}",
                    'Built-Date': new Date())
    }
}

jar.doLast {
    def jarFile = archiveFile.get().asFile
    ant.checksum file: jarFile
}

signing {
    sign publishing.publications
}

// configure the maven publication
publishing {
    publications {
        myPub(MavenPublication) {
            from components.java
            pom {
                name = 'markista'
                description = 'A Javadoc doclet that produces markdown formatted documentation rather than HTML.'
                url = 'https://sandydunlop.github.io/markista'
                licenses {
                    license {
                        name = 'GPLv3'
                        url = 'https://www.gnu.org/licenses/gpl-3.0.html'
                    }
                }
                developers {
                    developer {
                        id = 'sandydunlop'
                        name = 'Sandy Dunlop'
                        email = 'sandy.dunlop@gmail.com'
                    }
                }
                scm {
                    connection = 'scm:git:git://github.com/sandydunlop/markista.git'
                    developerConnection = 'scm:git:ssh://github.com:sandydunlop/markista.git'
                    url = 'https://github.com/sandydunlop/markista'
                }
            }
        }
    }

	repositories {
        maven {
            name = "LocalMavenWithChecksums"
            url = uri(layout.buildDirectory.dir("staging-deploy"))
        }
    }
}

task website (type: Copy) {
    duplicatesStrategy = 'include'
    from '../README.md'
    into '../../../../website/docs/markista'
    rename ('README.md','index.md')
}
task copyDocs(type: Copy) {
    duplicatesStrategy = 'include'
    from 'build/md-docs'
    into '../../../../website/docs/markista/javadoc'
}
website.dependsOn copyDocs
